CProgrammierung/eval_pipline/resources/testcases/bad/fail_empty_line.stdin
1o:x46jec89a,7equcnd1jktm,oazldbb,jy4sc0m0tadb91xj640g,oukqefi6,auahkkmr06wjwgz1fw,4pe9e84z0vxhz,khws63w
oazldbb:x46jec89a,oukqefi6,zlsrri2sprdaktuaz0
jy4sc0m0tadb91xj640g:oazldbb,oukqefi6,x46jec89a,zlsrri2sprdaktuaz0,rxf52natl4i-945
oukqefi6:x46jec89a,zlsrri2sprdaktuaz0,rxf52natl4i
bjwfk2ia606e85e:oukqefi6,zlsrri2sprdaktuaz0,x46jec89a,oazldbb,jy4sc0m0tadb91xj640g,rxf52natl4i,kmla2882
rxf52natl4i:zlsrri2sprdaktuaz0
kmla2882:rxf52natl4i,oukqefi6,zlsrri2sprdaktuaz0,rth6dmr6r
b2i567tudqejm:kmla2882,hrb6xgott,bjwfk2ia606e85e,zlsrri2sprdaktuaz0,rxf52natl4i,rth6dmr6r,ffjb2c,t8
hrb6xgott:rth6dmr6r,zlsrri2sprdaktuaz0,rxf52natl4i,kmla2882,t8,msbuwxy6gjf
rth6dmr6r:rxf52natl4i,t8
ffjb2c:rth6dmr6r,t8,kmla2882,hrb6xgott,msbuwxy6gjf,h65itj9k2bwr
msbuwxy6gjf:t8,rth6dmr6r

h65itj9k2bwr:msbuwxy6gjf,rth6dmr6r,t8,oqedknf4d6
dzr3:h65itj9k2bwr,ffjb2c,t8,msbuwxy6gjf,oqedknf4d6,ux9fsqmfgp0a
8qrj4ay9k1g:dzr3,dwictwh,t8,msbuwxy6gjf,h65itj9k2bwr,oqedknf4d6,ux9fsqmfgp0a,m5ge6vrf1pzlylxe7ou
dwictwh:oqedknf4d6,msbuwxy6gjf,h65itj9k2bwr,dzr3,ux9fsqmfgp0a,m5ge6vrf1pzlylxe7ou,pzr61t8
oqedknf4d6:ux9fsqmfgp0a,pzr61t8
m5ge6vrf1pzlylxe7ou:ux9fsqmfgp0a,pzr61t8,oqedknf4d6,on3yzw2b,zocjtaumzxihpm7
pzr61t8:ux9fsqmfgp0a,zocjtaumzxihpm7
on3yzw2b:pzr61t8,oqedknf4d6,ux9fsqmfgp0a,zocjtaumzxihpm7,r9h88e1wf40mj6qxzea8
b0axssxwzas:on3yzw2b,zocjtaumzxihpm7,ux9fsqmfgp0a,m5ge6vrf1pzlylxe7ou,pzr61t8,cuqptv6e6mv55,r9h88e1wf40mj6qxzea8
cuqptv6e6mv55:zocjtaumzxihpm7,r9h88e1wf40mj6qxzea8,pzr61t8,on3yzw2b,r7efj6n6i1r
r9h88e1wf40mj6qxzea8:zocjtaumzxihpm7
66xz2l9f4fi:r9h88e1wf40mj6qxzea8,cfxz9pgljnfbj,b0axssxwzas,zocjtaumzxihpm7,cuqptv6e6mv55,r7efj6n6i1r,qvjayb7dfq,f61dxln
cfxz9pgljnfbj:r7efj6n6i1r,zocjtaumzxihpm7,cuqptv6e6mv55,r9h88e1wf40mj6qxzea8,qvjayb7dfq,f61dxln,q11xcidwp8-514
r7efj6n6i1r:r9h88e1wf40mj6qxzea8
qvjayb7dfq:r7efj6n6i1r,r9h88e1wf40mj6qxzea8
f61dxln:qvjayb7dfq,q11xcidwp8,r7efj6n6i1r,ld4w79293vruzzvs0,yp75o0cm45y
q11xcidwp8:r7efj6n6i1r,qvjayb7dfq,yp75o0cm45y
ld4w79293vruzzvs0:q11xcidwp8,r7efj6n6i1r,qvjayb7dfq,yp75o0cm45y
apyt5ygp7v:ld4w79293vruzzvs0,yp75o0cm45y,qvjayb7dfq,f61dxln,q11xcidwp8,ga0l2eoai,b0gmp60dj1emf
30l49ae:yp75o0cm45y,ga0l2eoai,q11xcidwp8,ld4w79293vruzzvs0,apyt5ygp7v,b0gmp60dj1emf,m828kxb5l9xwq,n7
ga0l2eoai:ld4w79293vruzzvs0,yp75o0cm45y,m828kxb5l9xwq,n7
b0gmp60dj1emf:ga0l2eoai,m828kxb5l9xwq,yp75o0cm45y,n7,dz2lxdmmteik1rt849uv,wcgpfcr
m828kxb5l9xwq:n7,yp75o0cm45y,wcgpfcr
n7:wcgpfcr
dz2lxdmmteik1rt849uv:n7,wcgpfcr,ga0l2eoai,m828kxb5l9xwq,khws63w
auahkkmr06wjwgz1fw:wcgpfcr,m828kxb5l9xwq,n7,dz2lxdmmteik1rt849uv,khws63w
4pe9e84z0vxhz:auahkkmr06wjwgz1fw,khws63w,n7,dz2lxdmmteik1rt849uv,wcgpfcr,7equcnd1jktm,x46jec89a
khws63w:wcgpfcr,x46jec89a,oazldbb
7equcnd1jktm:khws63w,wcgpfcr,auahkkmr06wjwgz1fw,x46jec89a,oazldbb,jy4sc0m0tadb91xj640g
A:jy4sc0m0tadb91xj640g
I:100
